[project]
name = "valmar"
version = "0.1.0"
description = "Python SDK for the Valmar platform"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ai = ["pydantic-ai>=0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/valmar"]
