[project]
name = "valmar"
version = "1.0.0"
description = "Python SDK for the Valmar platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Valmar" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["valmar", "sdk", "agents", "enterprise-context", "knowledge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://docs.getvalmar.com"
Documentation = "https://docs.getvalmar.com"
Source = "https://github.com/TheValmarAI/valmar-python"

[project.optional-dependencies]
ai = ["pydantic-ai>=0.1"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
only-packages = true

[tool.hatch.build.targets.sdist]
only-include = [
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/src/valmar",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "/.gitignore",
    "/.pytest_cache",
    "/.venv",
    "/tests",
    "/uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/valmar"]
